--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,15 @@
-<!-- src/app/app.component.html -->
-
-<app-movie-list></app-movie-list>
+ 
+<!--<app-movie-list></app-movie-list>
 <app-customer-list></app-customer-list>
+<app-room-list></app-room-list>
+<app-session-list></app-session-list>
+<app-ticket-list></app-ticket-list> -->
+
+<div class="container">
+    <app-movie-list></app-movie-list>
+    <app-customer-list></app-customer-list>
+    <app-room-list></app-room-list>
+    <app-session-list></app-session-list>
+    <app-ticket-list></app-ticket-list>
+</div>
+  
