--- a/src/app/components/customer-list/customer-list.component.html
+++ b/src/app/components/customer-list/customer-list.component.html
@@ -1,10 +1,22 @@
-<p>customer-list works!</p>
+<!--<p>customer-list works!</p>
 
-<!-- src/app/components/customer-list/customer-list.component.html -->
+ src/app/components/customer-list/customer-list.component.html 
 
 <div *ngFor="let customer of customers">
     <h2>{{ customer.getPrimeiroNome() }} {{ customer.getUltimoNome() }}</h2>
     <p>Email: {{ customer.getEmail() }}</p>
     <p>Status: {{ customer.getAtivo() ? 'Ativo' : 'Inativo' }}</p>
+</div>-->
+
+<!-- src/app/components/customer-list/customer-list.component.html -->
+
+<div class="component container">
+    <h1>Lista de Clientes</h1>
+    <div *ngFor="let customer of customers" class="flex-item">
+      <h2>{{ customer.getPrimeiroNome() }} {{ customer.getUltimoNome() }}</h2>
+      <p>Email: {{ customer.getEmail() }}</p>
+      <p>Status: {{ customer.getAtivo() ? 'Ativo' : 'Inativo' }}</p>
+    </div>
 </div>
+  
   
