--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
- 
 <!--<app-movie-list></app-movie-list>
 <app-customer-list></app-customer-list>
 <app-room-list></app-room-list>
 <app-session-list></app-session-list>
-<app-ticket-list></app-ticket-list> -->
+<app-ticket-list></app-ticket-list> 
 
 <div class="container">
     <app-movie-list></app-movie-list>
@@ -11,5 +10,22 @@
     <app-room-list></app-room-list>
     <app-session-list></app-session-list>
     <app-ticket-list></app-ticket-list>
+</div>-->
+
+<div class="container">
+    <section>
+        <app-movie-list></app-movie-list>
+    </section>
+    <section>
+        <app-customer-list></app-customer-list>
+    </section>
+    <section>
+        <app-room-list></app-room-list>
+    </section>
+    <section>
+        <app-session-list></app-session-list>
+    </section>
+    <section>
+        <app-ticket-list></app-ticket-list>
+    </section>
 </div>
-  
