--- a/src/app/components/ticket-list/ticket-list.component.html
+++ b/src/app/components/ticket-list/ticket-list.component.html
@@ -3,7 +3,7 @@
     <p>Ingresso ID: {{ ticket.getId() }}</p>
     <p>Sessão ID: {{ ticket.getSessionId() }}</p>
     <p>Cliente ID: {{ ticket.getClienteId() }}</p>
-</div>-->
+</div>
 
 <div class="component container">
   <h1>Ingressos</h1>
@@ -11,5 +11,16 @@
     <p>Ingresso ID: {{ ticket.getId() }}</p>
     <p>Sessão ID: {{ ticket.getSessionId() }}</p>
     <p>Cliente ID: {{ ticket.getClienteId() }}</p>
+  </div>
+</div>-->
+
+<div class="component container">
+  <h1>Ingressos</h1>
+  <div class="flex-container">
+    <div *ngFor="let ticket of tickets" class="flex-item">
+      <p>Ingresso ID: {{ ticket.getId() }}</p>
+      <p>Sessão ID: {{ ticket.getSessionId() }}</p>
+      <p>Cliente ID: {{ ticket.getClienteId() }}</p>
+    </div>
   </div>
 </div>
