adding all skeleton form components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,3 @@
-<!--<app-movie-list></app-movie-list>
-<app-customer-list></app-customer-list>
-<app-room-list></app-room-list>
-<app-session-list></app-session-list>
-<app-ticket-list></app-ticket-list> 
-
-<div class="container">
-    <app-movie-list></app-movie-list>
-    <app-customer-list></app-customer-list>
-    <app-room-list></app-room-list>
-    <app-session-list></app-session-list>
-    <app-ticket-list></app-ticket-list>
-</div>-->
-
 <div class="container">
     <section>
         <app-movie-list></app-movie-list>
@@ -20,10 +6,19 @@
         <app-customer-list></app-customer-list>
     </section>
     <section>
+        <app-customer-form></app-customer-form>
+    </section>
+    <section>
         <app-room-list></app-room-list>
     </section>
     <section>
+        <app-room-form></app-room-form>
+    </section>
+    <section>
         <app-session-list></app-session-list>
+    </section>
+    <section>
+        <app-session-form></app-session-form>
     </section>
     <section>
         <app-ticket-list></app-ticket-list>
