--- a/src/app/components/customer-form/customer-form.component.html
+++ b/src/app/components/customer-form/customer-form.component.html
@@ -1,1 +1,27 @@
-<p>customer-form works!</p>
+<div class="component container">
+    <h1>Cadastrar Cliente</h1>
+    <form [formGroup]="customerForm" (ngSubmit)="onSubmit()">
+      <label for="primeiro_nome">Primeiro Nome:</label>
+      <input id="primeiro_nome" formControlName="primeiro_nome">
+      <div *ngIf="customerForm.get('primeiro_nome')?.invalid && customerForm.get('primeiro_nome')?.touched">
+        Primeiro nome é obrigatório.
+      </div>
+  
+      <label for="ultimo_nome">Último Nome:</label>
+      <input id="ultimo_nome" formControlName="ultimo_nome">
+      <div *ngIf="customerForm.get('ultimo_nome')?.invalid && customerForm.get('ultimo_nome')?.touched">
+        Último nome é obrigatório.
+      </div>
+  
+      <label for="email">Email:</label>
+      <input id="email" formControlName="email">
+      <div *ngIf="customerForm.get('email')?.invalid && customerForm.get('email')?.touched">
+        Email deve ser válido.
+      </div>
+  
+      <label for="ativo">Ativo:</label>
+      <input id="ativo" type="checkbox" formControlName="ativo">
+  
+      <button type="submit" [disabled]="customerForm.invalid">Cadastrar</button>
+    </form>
+  </div>
